--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@types/react-dom": "^19",
 		"eslint": "^9",
 		"eslint-config-next": "15.1.8",
+		"eslint-config-prettier": "^10.1.5",
 		"postcss": "^8",
 		"prettier": "^3.5.3",
 		"prettier-plugin-organize-imports": "^4.1.0",
