--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,5 +3,6 @@
 	"singleQuote": false,
 	"useTabs": true,
 	"printWidth": 120,
+	"plugins": ["prettier-plugin-organize-imports", "prettier-plugin-tailwindcss"],
 	"trailingComma": "es5"
 }
