--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 		"@radix-ui/react-slot": "^1.2.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"dayjs": "^1.11.13",
+		"iconsax-reactjs": "^0.0.8",
 		"lucide-react": "^0.511.0",
 		"next": "15.1.8",
 		"next-themes": "^0.4.6",
